# TouchController

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report_en_us.yml  bug_report_zh_cn.yml  bug_report_zh_tw.yml  feature_request_en_us.yml  feature_request_zh_cn.yml  feature_request_zh_tw.yml
.github/workflows/: build.yml
buildSrc/: build.gradle.kts
combine/: build.gradle.kts
common-data/: build.gradle.kts
gradle/: libs.versions.toml
log4j-slf4j2-impl/: build.gradle.kts
mod/: build.gradle.kts
mod/common/: build.gradle.kts
mod/common-fabric/: README.md
mod/common-forge/: rules.pro
mod/fabric-1.16.5/: gradle.properties
mod/fabric-1.20.1/: build.gradle.kts  gradle.properties
mod/fabric-1.21.1/: build.gradle.kts  gradle.properties
mod/fabric-1.21.3/: build.gradle.kts  gradle.properties
mod/fabric-1.21.4/: build.gradle.kts  gradle.properties
mod/forge-1.12.2/: build.gradle.kts  gradle.properties
mod/forge-1.16.5/: build.gradle.kts  gradle.properties
mod/forge-1.20.1/: build.gradle.kts  gradle.properties  rules.pro
mod/resource-generation/: build.gradle.kts
mod/resources/: build.gradle.kts
proxy-client/: build.gradle.kts
proxy-client-android/: build.gradle.kts
proxy-protocol/: Cargo.toml
proxy-protocol/src/: lib.rs
proxy-server/: build.gradle.kts
proxy-server-android/: Cargo.toml  build.gradle.kts
proxy-server-android/src/: jni.rs  lib.rs  poller.rs  transport.rs
proxy-windows/: Cargo.toml  build.gradle.kts
proxy-windows/src/: input.rs  lib.rs
(+625 files in other folders)
