[package]
name = "proxy-windows"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-protocol.path = "../proxy-protocol"
jni.workspace = true
bytemuck.workspace = true

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Input_Touch",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi"
]
